--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-n-head-ssr lang="en-US">
 
 <head>
-    <title>Bettamint</title>
+    <title>-bettamint-</title>
     <meta charset="utf-8">
     <meta name="application-name" content="Bettamint">
     <meta name="format-detection" content="telephone=no">
